--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.0.1
+  get_it: ^4.0.2
   shared_preferences: ^0.4.3
   http: ^0.12.0+2
 
